# facedet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py  testfacedet.cc  testfacedet.py
facedet/: facedetbinding.cc  facedetcnn-data.cc  facedetcnn-model.cc  facedetcnn.cc  facedetcnn.h
